--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,55 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <style>
-        .footer-info {
-            float: left;
-            width: 100%;
-            margin: 50px;
-            padding: 0;
-            position: relative;
-        }
-        .footer-info h3 {
-            color: #222;
-            font-size: 30px;
-            font-weight: 600;
-            border-left: solid #157fda 5px;
-            padding: 0 0 0 15px;
-            margin-bottom: 24px;
-        }
-
-        .footer-info i {
-            position: absolute;
-            left: 0;
-            font-size: 25px;
-            width: 30px;
-            text-align: center;
-            color: #157fda;
-        }
-
-        .footer-info p {
-            padding-left: 50px;
-            margin-bottom: 15px;
-        }
-
-        .footer-info h3 {
-            margin-bottom: 20px;
-            margin-top: 20px;
-        }
-
-        .footer-info h3 {
-            float: left;
-            width: 100%;
-        }
-
-        .footer-info p {
-            float: left;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
-{% include "home.html" %}
+{% block styles %}
+<link
+        rel="stylesheet"
+        href="/static/css/contact.css"
+        type="text/css"
+/>
+{% endblock %}
+{% include 'layout.html' %}
+{% include 'navigation.html' %}
 {% block content %}
 <div class="col-md-4">
     <div class="footer-info padding">
@@ -63,5 +20,3 @@
     </div>
 </div>
 {% endblock %}
-</body>
-</html>
