--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<body>
-{% include "home.html" %}
+{% include 'layout.html' %}
+{% include 'navigation.html' %}
+{% block content %}
 <main role="main" class="container">
-    {% block content %}
     <form class="form-horizontal" action="/edit/{{player.id}}" method="post">
         <div class="form-group">
             <label for="name"><b>Name</b></label>
@@ -52,9 +50,6 @@
                 <button type="submit" class="btn btn-success">Save</button>
             </div>
         </div>
-
     </form>
-    {% endblock %}
 </main>
-</body>
-</html>
+{% endblock %}
