--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -1,38 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<style>
-* {box-sizing: border-box;}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.header a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 10px;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 45px;
-  border-radius: 4px;
-}
-
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.header-right {
-  float: right;
-}
-</style>
-<body>
+{% block styles %}
+<link
+        rel="stylesheet"
+        href="/static/css/navigation.css"
+        type="text/css"
+/>
+{% endblock %}
+<div class="header">
+<a href="/" class="logo"><h1>{{title}}</h1></a>
     {% for link in nav %}
     <div class="header-right">
         <a class="btn btn-default" href="{{ link.url }}">{{ link.name }}</a>
     </div>
     {% endfor %}
-</body>
-</html>
+</div>
