--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<body>
-{% include "home.html" %}
+{% include 'layout.html' %}
+{% include 'navigation.html' %}
+{% block content %}
 <main role="main" class="container">
-    {% block content %}
     <form action="/players/new" method="POST">
         <div class="form-group">
             <label for="name"><b>Name</b></label>
@@ -49,7 +47,6 @@
             </div>
         </div>
     </form>
-    {% endblock %}
 </main>
-</body>
-</html>
+{% endblock %}
+
