--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -1,52 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<body>
-{% include "home.html" %}
-<main role="main" class="container">
+{% include 'layout.html' %}
+{% include 'navigation.html' %}
 {% block content %}
-<form class="form-horizontal">
-  <div class="form-group">
-      <label class="control-label col-sm-2"><b>Name:</b></label>
-    <div class="col-sm-10">
-        <p class="form-control" >{{ player.Name }}</p>
-    </div>
-  </div>
-  <div class="form-group">
-    <label class="control-label col-sm-2"><b>Team:</b></label>
-    <div class="col-sm-10">
-        <p class="form-control" >{{ player.Team }}</p>
-    </div>
-  </div>
-      <div class="form-group">
-          <label class="control-label col-sm-2"><b>Position:</b></label>
-    <div class="col-sm-10">
-        <p class="form-control" >{{ player.Position }}</p>
-    </div>
-  </div>
-      <div class="form-group">
-          <label class="control-label col-sm-2"><b>Height:</b></label>
-    <div class="col-sm-10">
-        <p class="form-control" >{{ player.Height }}</p>
-    </div>
-  </div>
-    <div class="form-group">
-    <label class="control-label col-sm-2"><b>Weight:</b></label>
-    <div class="col-sm-10">
-        <p class="form-control" >{{ player.Weight }}</p>
-    </div>
-  </div>
-      <div class="form-group">
-    <label class="control-label col-sm-2"><b>Age:</b></label>
-    <div class="col-sm-10">
-        <p class="form-control" >{{ player.Age }}</p>
-    </div>
-  </div>
-     <div class="card-body">
-        <a href="/index" class="card-link btn btn-primary">Back</a>
-    </div>
-
-</form>
-{% endblock %}
+<main role="main" class="container">
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label class="control-label col-sm-2"><b>Name:</b></label>
+            <div class="col-sm-10">
+                <p class="form-control">{{ player.Name }}</p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2"><b>Team:</b></label>
+            <div class="col-sm-10">
+                <p class="form-control">{{ player.Team }}</p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2"><b>Position:</b></label>
+            <div class="col-sm-10">
+                <p class="form-control">{{ player.Position }}</p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2"><b>Height:</b></label>
+            <div class="col-sm-10">
+                <p class="form-control">{{ player.Height }}</p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2"><b>Weight:</b></label>
+            <div class="col-sm-10">
+                <p class="form-control">{{ player.Weight }}</p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-2"><b>Age:</b></label>
+            <div class="col-sm-10">
+                <p class="form-control">{{ player.Age }}</p>
+            </div>
+        </div>
+        <div class="card-body">
+            <a href="/index" class="card-link btn btn-primary">Back</a>
+        </div>
+    </form>
 </main>
-</body>
-</html>
+{% endblock %}
+
